fix overflow on team

--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,7 @@ html{
     width: 40%;
     height: 32em;
     background-color: #F5F5F5;
+    overflow: auto;
 }
 
 .box{
